<resources>
    <string name="app_name">Cocktail App</string>
    <string name="image_of_cocktail">Image of cocktail</string>
    <string name="cocktail_shaker_placeholder">Cocktail shaker placeholder</string>
    <string name="result_not_found">Result not found</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="search_cocktail_name">Search cocktail name</string>
    <string name="message_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lucky">Lucky</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="shake_your_lucky_cocktail">Shake your lucky cocktail</string>
    <string name="sensor_not_available">Accelerometer sensor is not available in this device</string>
    <string name="favourite_button">Favourite button</string>
    <string name="try_it_your_self">Try it your self:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="colon">&#160;:&#160;&#160;</string>
    <string name="delete_cocktail">Do you want to delete %1$s?</string>
    <string name="login_image">Login image</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_sign_up_here"><u>No account? Sign up here!</u></string>
    <string name="error_field_required">This field is required</string>
    <string name="error_format_email">Invalid email format</string>
    <string name="error_minimum_password">Password must be at least 8 characters</string>
    <string name="error_not_match_confirm_password">Password does not match with confirmed password</string>
    <string name="progress_login">Login…</string>
    <string name="progress_register">Registering…</string>
    <string name="confirmed_password">Confirmed Password</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="register_successful">Your account had been register successfully.</string>
    <string name="username">Username</string>
    <string name="hello_user">Hello, %1$s</string>
    <string name="no_favourite">No favourited cocktail</string>
    <string name="theme">Theme</string>
</resources>