<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/login_image"
            android:src="@drawable/cocktail_login_page" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_email"
                style="@style/TextInputEditTextAppearance"
                android:drawableEnd="@drawable/ic_email"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_password"
                style="@style/TextInputEditTextAppearance"
                android:drawableEnd="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/purple_500"
            android:onClick="onLoginClick"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onRegisterClick"
            android:text="@string/no_account_sign_up_here"
            android:textColor="@color/purple_500" />

    </LinearLayout>

</RelativeLayout>