<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CocktailDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.CocktailApp.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:maxLines="3"
            app:toolbarId="@id/toolbar_detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/iv_cocktail_image_detail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="@string/image_of_cocktail"
                    android:foreground="@drawable/background_image_detail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="0dp"
                android:paddingEnd="24dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.CocktailApp.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <TextView
                android:id="@+id/tv_cocktail_category_detail"
                style="@style/TextViewAppearance.Detail"
                app:drawableStartCompat="@drawable/ic_category"
                tools:text="Category" />

            <TextView
                android:id="@+id/tv_cocktail_alcoholic_detail"
                style="@style/TextViewAppearance.Detail"
                app:drawableStartCompat="@drawable/ic_alcoholic"
                tools:text="Alcoholic" />

            <TextView
                android:id="@+id/tv_cocktail_glass_detail"
                style="@style/TextViewAppearance.Detail"
                app:drawableStartCompat="@drawable/ic_glass"
                tools:text="Glass" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/try_it_your_self"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cocktail_instruction_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="Instruction" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/layout_cocktail_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/favourite_button"
        android:onClick="onFavouriteClick"
        android:src="@drawable/ic_favorite"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_anchor="@id/appbar_detail"
        app:layout_anchorGravity="end|bottom"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>